bootstrap/manifests/traefik-dashboard-svc-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard-cip
  namespace: kube-system
spec:
  ports:
  - name: dash
    port: 8080
    protocol: TCP
    targetPort: dash
  selector:
    app: traefik
    release: traefik
  type: ClusterIP
