bootstrap/manifests/traefik-dashboard-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard-np
  namespace: kube-system
spec:
  ports:
  - name: dash
    port: 8080
    protocol: TCP
    targetPort: dash
    nodePort: 30180
  selector:
    app: traefik
    release: traefik
  type: NodePort
