bootstrap/manifests/traefik-dashboard-svc-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard-np
  namespace: kube-system
spec:
  ports:
  - name: traefik
    port: 9000
    protocol: TCP
    targetPort: traefik
    nodePort: 30180
  selector:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
  type: NodePort
