bootstrap/manifests/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: traefik
    chart: traefik-1.77.1
    heritage: Tiller
    release: traefik
  name: traefik
  namespace: kube-system
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    nodePort: 32556
    port: 80
    protocol: TCP
    targetPort: http
  - name: https
    nodePort: 32585
    port: 443
    protocol: TCP
    targetPort: https
  - name: metrics
    nodePort: 30803
    port: 8080
    protocol: TCP
    targetPort: dash
  - name: api
    port: 8880
    protocol: TCP
  selector:
    app: traefik
    release: traefik
  sessionAffinity: None
  type: LoadBalancer
