bootstrap/manifests/argocd-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: argocd.k3d.local
    http:
      paths: 
      - path: /
        backend:
          serviceName: argocd-server
          servicePort: 443
