bootstrap/manifests/traefik-ingress-webui-http.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: traefik-dashboard.k3d.local
    http:
      paths: 
      - path: /
        backend:
          serviceName: traefik-dashboard-cip
          servicePort: 8080
